ingress/kube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: kube-system
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "sg-0ba26280d18f534c8"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/certificate-arn: 'arn:aws:acm:ap-northeast-2:853963783084:certificate/4d49f16f-432c-4d85-9082-13720f2e6d7d'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  ingressClassName: alb # 이 줄을 추가
  rules:
  - host: "kube.hjp1.shop"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-ops-view
            port:
              number: 8080
